install(DIRECTORY org.kde.klassylighttraditional.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassylightleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassydarktraditional.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassydarkleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassytwilighttraditional.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
install(DIRECTORY org.kde.klassytwilightleftpanel.desktop
        DESTINATION ${KDE_INSTALL_DATADIR}/plasma/look-and-feel)
